--- a/fern/generators.yml
+++ b/fern/generators.yml
@@ -2,7 +2,7 @@
 
 api:
   specs:
-    - openapi: openapi.yaml
+    - openapi: CMSOpenAPISpecV000.json
 
 groups:
   python-sdk:
@@ -12,8 +12,8 @@ groups:
         output:
           location: pypi
           package-name: startersdk
-          # github:
-          #   repository: fern-demo/starter-python-sdk
+        github:
+          repository: cdonel707/jasperedi-python-sdk
         config:
           client_class_name: Starter
         smart-casing: true
@@ -25,8 +25,8 @@ groups:
           location: npm
           package-name: "startersdk"
           # token: ${NPM_TOKEN}
-          # github:
-          #   repository: fern-demo/starter-typescript-sdk
+        github:
+          repository: cdonel707/jasperedi-typescript-sdk
         config:
           namespaceExport: Starter
           allowCustomFetcher: true
